Spot for ChatGPT to help with... loads of errors

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
         <activity android:name=".CatchEntryKgs"/>
         <activity android:name=".CatchEntryInches"/>
         <activity android:name=".CatchEntryMetric"/>
+        <activity android:name=".CatchEntryTournament"/>
+
 
     </application>
 
