--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
 
     
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
 
     <application
         android:allowBackup="true"
@@ -35,6 +38,7 @@
 
         <activity android:name=".CatchEntryTournament"/>
         <activity android:name=".CatchEntryTournamentKgs"/>
+        <activity android:name=".UserTrainingIndex"/>
 
         <activity android:name=".PopupWeightEntryTourKgs"/>
         <activity android:name=".PopupWeightEntryTourLbs"/>
