--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -54,6 +55,7 @@
 
         <activity android:name=".training.UserTrainingIndex"/>
         <activity android:name=".training.UserTrainingVoiceCommands"/>
+        <activity android:name=".training.TrainingWords"/>
 
 
         <activity android:name=".PopupWeightEntryTourKgs"
