Straightened up some Species Listing to smooth it out. Hopefully it works. Finish Images, then GPS with GPS recall Map Query, and package it as Manual...

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
 
         <activity android:name=".SetUpActivity"/>
 
-        <activity android:name=".adapters.AllSpeciesSelectionActivity" />
+        <activity android:name=".activities.AllSpeciesSelectionActivity" />
         <activity android:name=".SpeciesSelectionActivity" />
 
 
