--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.bramestorm.bassanglertracker">
 
     
@@ -83,10 +84,26 @@
         <activity android:name=".PopupLengthEntryMetric"
             android:windowSoftInputMode="adjustResize"/>
 
+        <activity android:name=".share.ShareFishingLogsActivity" />
+        <activity android:name=".summary.TopFiveCatchesActivity" />
+        <activity android:name=".LookUpShareDataActivity" />
+        <activity android:name=".SummaryActivity" />
+
+
+
         <activity android:name=".PopUpAlarm"
             android:theme="@style/Theme.BassAnglerTracker"
             android:windowSoftInputMode="adjustResize"/>
 
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
 
 
 
