--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.bramestorm.bassanglertracker">
 
-    
-    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <!-- AndroidManifest.xml for Catch and Call (Manual Mode)
+    - Locks all activities to portrait
+    - Uses tools:ignore to suppress orientation lint warnings
+    - Includes all user input pages, tournament popups, training, and map/sharing -->
+
+                <!--Permissions List-->
+    <!-- Location Permissions -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+    <!-- Internet & Audio -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+
+    <!-- Alarm Permission -->
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
+
 
 
     <application
@@ -27,8 +38,9 @@
 
 
 
-        <!-- All Activities here -->
+        <!-- All Activities Here -->
 
+        <!-- Splash Page with Catch and Call Logo -->
         <activity
             android:name=".IntroPage"
             android:exported="true">
@@ -38,62 +50,130 @@
             </intent-filter>
         </activity>
 
+        <!-- Directory of All Activities  -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.BassAnglerTracker" />
+            android:theme="@style/Theme.BassAnglerTracker"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
 
 
-        <activity android:name=".SetUpActivity"/>
+        <!-- Set Up Days Fishing Activity -->
+        <activity android:name=".SetUpActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
 
-        <activity android:name=".activities.AllSpeciesSelectionActivity" />
-        <activity android:name=".activities.SpeciesSelectionActivity" />
+        <!-- User can select species for list and can add species to list -->
+        <activity android:name=".activities.AllSpeciesSelectionActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
+        <!-- Users can arrange the positioning of the 8 on the species list -->
+        <activity android:name=".activities.SpeciesSelectionActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
 
-        <activity android:name=".MapCatchLocationsActivity" />
+        <!-- Fun Day Catch Entry Pages -->
+        <activity android:name=".CatchEntryLbsOzs"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
+        <activity android:name=".CatchEntryKgs"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
+        <activity android:name=".CatchEntryInches"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
+        <activity android:name=".CatchEntryMetric"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
 
+        <!-- Tournament Fishing Activity -->
+        <activity android:name=".CatchEntryTournament"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
+        <activity android:name=".CatchEntryTournamentKgs"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
+        <activity android:name=".CatchEntryTournamentInches"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
+        <activity android:name=".CatchEntryTournamentCentimeters"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
 
-        <activity android:name=".CatchEntryLbsOzs"/>
-        <activity android:name=".CatchEntryKgs"/>
-        <activity android:name=".CatchEntryInches"/>
-        <activity android:name=".CatchEntryMetric"/>
+        <!-- Referral to web PDF How To Pages -->
+        <activity android:name=".training.UserTrainingIndex"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
+        <activity android:name=".training.UserTrainingVoiceCommands"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
+        <activity android:name=".training.TrainingWords"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
 
-        <activity android:name=".CatchEntryTournament"/>
-        <activity android:name=".CatchEntryTournamentKgs"/>
-        <activity android:name=".CatchEntryTournamentInches"/>
-        <activity android:name=".CatchEntryTournamentCentimeters"/>
-
-        <activity android:name=".training.UserTrainingIndex"/>
-        <activity android:name=".training.UserTrainingVoiceCommands"/>
-        <activity android:name=".training.TrainingWords"/>
-
+        <!-- Tournament Popups for User Input -->
         <activity android:name=".PopupWeightEntryTourKgs"
-            android:windowSoftInputMode="adjustResize"/>
+            android:windowSoftInputMode="adjustResize"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
         <activity android:name=".PopupWeightEntryTourLbs"
-            android:windowSoftInputMode="adjustResize"/>
+            android:windowSoftInputMode="adjustResize"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
         <activity android:name=".PopupLengthEntryTourInches"
-            android:windowSoftInputMode="adjustResize"/>
+            android:windowSoftInputMode="adjustResize"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
         <activity android:name=".PopupLengthEntryTourCms"
-            android:windowSoftInputMode="adjustResize"/>
+            android:windowSoftInputMode="adjustResize"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
 
+        <!-- Fun Day Popups for User Input -->
         <activity android:name=".PopupWeightEntryKgs"
-            android:windowSoftInputMode="adjustResize"/>
+            android:windowSoftInputMode="adjustResize"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
         <activity android:name=".PopupWeightEntryLbs"
-            android:windowSoftInputMode="adjustResize"/>
+            android:windowSoftInputMode="adjustResize"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
         <activity android:name=".PopupLengthEntryInches"
-            android:windowSoftInputMode="adjustResize"/>
+            android:windowSoftInputMode="adjustResize"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
         <activity android:name=".PopupLengthEntryMetric"
-            android:windowSoftInputMode="adjustResize"/>
-
-        <activity android:name=".share.ShareFishingLogsActivity" />
-        <activity android:name=".summary.TopFiveCatchesActivity" />
-        <activity android:name=".LookUpShareDataActivity" />
-        <activity android:name=".SummaryActivity" />
+            android:windowSoftInputMode="adjustResize"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
 
 
+        <!-- Looking Up Catch Locations -->
+        <activity android:name=".MapCatchLocationsActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
+        <!-- Share all Catch Data  -->
+        <activity android:name=".share.ShareFishingLogsActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
+        <!-- Get the Top 5 Catches -->
+        <activity android:name=".TopFiveCatchesActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
+        <!-- Share Specific Data with CSV files -->
+        <activity android:name=".LookUpShareDataActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
 
+
+
+        <!-- For all ALARMS of Tournament pages -->
         <activity android:name=".PopUpAlarm"
             android:theme="@style/Theme.BassAnglerTracker"
-            android:windowSoftInputMode="adjustResize"/>
+            android:windowSoftInputMode="adjustResize"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
 
         <provider
             android:name="androidx.core.content.FileProvider"
