--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,13 @@
 
     <!-- Internet & Audio -->
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
 
     <!-- Alarm Permission -->
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+
 
 
 
@@ -214,7 +217,7 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-
+        <receiver android:name=".alarm.AlarmReceiver" />
 
     </application>
 
