--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -209,6 +209,11 @@
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"/>
 
+        <activity android:name=".VoiceTestActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
+
+
 
         <!-- For all ALARMS of Tournament pages -->
         <!-- Suppress: Letterboxing warning for fixed portrait (intended design) -->
