--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,7 @@ playServicesLocation = "21.3.0"
 supportAnnotations = "28.0.0"
 material = "1.12.0"
 playServicesMaps = "19.1.0"
+uiTestAndroid = "1.8.0"
 
 
 [libraries]
@@ -54,6 +55,7 @@ porcupine-java = { module = "ai.picovoice:porcupine-java", version.ref = "porcup
 support-annotations = { group = "com.android.support", name = "support-annotations", version.ref = "supportAnnotations" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 play-services-maps = { group = "com.google.android.gms", name = "play-services-maps", version.ref = "playServicesMaps" }
+androidx-ui-test-android = { group = "androidx.compose.ui", name = "ui-test-android", version.ref = "uiTestAndroid" }
 
 
 [plugins]
