--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,16 @@
+
 [versions]
 agp = "8.5.2"
+androidx-media    = "1.6.0"
 gsonVersion = "2.12.1"
 kotlin = "1.9.0"
+compose-ui        = "1.8.0"
 core = "1.15.0"
 core-ktx = "1.15.0"
+espresso          = "3.5.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
-espressoCore = "3.6.1"
+espressoCore = "3.5.0"
 kotlinSymbolProcessingApi = "1.4.0-rc-dev-experimental-20200828"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.10.1"
@@ -56,7 +60,8 @@ support-annotations = { group = "com.android.support", name = "support-annotatio
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 play-services-maps = { group = "com.google.android.gms", name = "play-services-maps", version.ref = "playServicesMaps" }
 androidx-ui-test-android = { group = "androidx.compose.ui", name = "ui-test-android", version.ref = "uiTestAndroid" }
-
+compose-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose-ui" }
+androidx-media = { module = "androidx.media:media", version.ref = "androidx-media" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
