--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -185,6 +185,12 @@
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"/>
 
+        <!-- VCC Popup Activities  -->
+        <!-- Suppress: Letterboxing warning for fixed portrait (intended design) -->
+        <activity android:name=".PopupVccTournLbs"
+            android:windowSoftInputMode="adjustResize"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
 
         <!-- Looking Up Catch Locations -->
         <!-- Suppress: Letterboxing warning for fixed portrait (intended design) -->
@@ -275,8 +281,7 @@
             </intent-filter>
         </receiver>
 
-
-
+        <receiver android:name="com.bramestorm.bassanglertracker.voice.VoiceWakeReceiver" />
 
     </application>
 
